[package]
name = "snooper"
version = "0.1.0"
edition = "2021"
authors = ["Cuprumwz"]
description = "窥探嵌入式终端设备"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tribe-valver = { version = "0.1.0", features = ["std"] }
# tribe-couper = { version = "0.1.0", features = ["std"] }
# tribe-hinger = { version = "0.1.0", features = ["std"] }
# tribe-larder = { version = "0.1.0", features = ["std"] }
# tribe-snaper = { version = "0.1.0", features = ["std"] }
# tribe-stroma = { version = "0.1.0", features = ["std"] }
# tribe-vitaer = { version = "0.1.0", features = ["std"] }

tribe-valver = { git = "https://github.com/cuprumwz/tribe.git", features = [] }
tribe-couper = { git = "https://github.com/cuprumwz/tribe.git", features = [] }
tribe-hinger = { git = "https://github.com/cuprumwz/tribe.git", features = [] }
tribe-larder = { git = "https://github.com/cuprumwz/tribe.git", features = [] }
tribe-snaper = { git = "https://github.com/cuprumwz/tribe.git", features = [] }
tribe-stroma = { git = "https://github.com/cuprumwz/tribe.git", features = [] }
tribe-vitaer = { git = "https://github.com/cuprumwz/tribe.git", features = [] }

serde = { version = "1.0", features = ["derive"] }
serialport = { git = "https://github.com/serialport/serialport-rs", features = ["serde"] }
